Deploy Web Scraping Data using python

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -80,7 +80,13 @@
                         </td>
                         <td style="font-weight: 600;">{{scrap.title}}</td>
                         <td style="font-weight: 600;" class="text-center">
-                            {{scrap.rating}}
+                            <div
+                                style="background: green;display: flex;justify-content: space-evenly;align-items: center;color: white;border-radius: 5px;">
+                                {{scrap.rating}}
+                                <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMyIgaGVpZ2h0PSIxMiI+PHBhdGggZmlsbD0iI0ZGRiIgZD0iTTYuNSA5LjQzOWwtMy42NzQgMi4yMy45NC00LjI2LTMuMjEtMi44ODMgNC4yNTQtLjQwNEw2LjUuMTEybDEuNjkgNC4wMSA0LjI1NC40MDQtMy4yMSAyLjg4Mi45NCA0LjI2eiIvPjwvc3ZnPg=="
+                                    class="_1wB99o" />
+                            </div>
+
                         </td>
                         <td style="font-weight: 600;" class="text-center">
                             <b>
@@ -123,7 +129,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">bubmit</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </div>
             </form>
         </div>
